--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,31 @@ td, th {
     text-align: center;
 }
 </style>
-<b>Données Initiales</b><br/>Taux de l'assurance annuel : 0,98 %<br/>Taux du crédit annuel : 3,10 %<br/>Montant emprunté : 203 000,00 €<br/>Durée : 202 Mois<br/>Succes : Oui<br><br/><b>Modifications</b><br/>Echeance 6 : remboursement 50000 € / + -12 Mois<br/><br/><b>Récapitulatif</b><br/>Mensualité payée : 262 613,48 €<br/>Capital remboursé : 203 000,00 €<br/>Montant d'intérêts : 45 294,55 €<br/>Montant d'assurance : 14 318,92 €<br/>Coût du crédit : 59 613,48 €<br/><br/><table><tr><th>#</th><th>Capital restant dû Avant</th><th>Mensualité payée</th><th>Capital remboursé</th><th>Montant d'intérêts</th><th>Montant d'assurance</th><th>Capital restant dû après</th></tr><tr><td>1</td><td>203 000,00 €</td>
+<b>Données Initiales</b><br/>Taux de l'assurance annuel : 0,98 %<br/>
+Taux du crédit annuel : 3,10 %<br/>
+Montant emprunté : 203 000,00 €<br/>
+Durée : 202 Mois<br/>
+Succes : Oui<br>
+<br/><b>Modifications</b><br/>Echeance 6 : remboursement 50000 € / + -12 Mois<br/>
+<br/>
+<b>Récapitulatif</b><br/>Mensualité payée : 262 613,48 €<br/>
+Capital remboursé : 203 000,00 €<br/>
+Montant d'intérêts : 45 294,55 €<br/>
+Montant d'assurance : 14 318,92 €<br/>
+Coût du crédit : 59 613,48 €
+<br/>
+<br/>
+<table>
+<tr>
+  <th>#</th>
+  <th>Capital restant dû Avant</th>
+  <th>Mensualité payée</th>
+  <th>Capital remboursé</th>
+  <th>Montant d'intérêts</th>
+  <th>Montant d'assurance</th>
+  <th>Capital restant dû après</th>
+</tr>
+<tr><td>1</td><td>203 000,00 €</td>
 <td>1 336,73 €</td>
 <td>646,53 €</td>
 <td>524,42 €</td>
