--- a/tests/index.html
+++ b/tests/index.html
@@ -7,14 +7,17 @@ td, th {
     text-align: center;
 }
 </style>
-<b>Données Initiales</b><br/>Taux de l'assurance annuel : 0,98 %<br/>
+<b>Données Initiales</b><br/>
+Taux de l'assurance annuel : 0,98 %<br/>
 Taux du crédit annuel : 3,10 %<br/>
 Montant emprunté : 203 000,00 €<br/>
 Durée : 202 Mois<br/>
 Succes : Oui<br>
-<br/><b>Modifications</b><br/>Echeance 6 : remboursement 50000 € / + -12 Mois<br/>
+<br/><b>Modifications</b><br/>
+Echeance 6 : remboursement 50000 € / + -12 Mois<br/>
 <br/>
-<b>Récapitulatif</b><br/>Mensualité payée : 262 613,48 €<br/>
+<b>Récapitulatif</b><br/>
+Mensualité payée : 262 613,48 €<br/>
 Capital remboursé : 203 000,00 €<br/>
 Montant d'intérêts : 45 294,55 €<br/>
 Montant d'assurance : 14 318,92 €<br/>
